# naad

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
benches/: benchmarks.rs
docs/development/: roadmap.md  shruti-migration.md
examples/: basic.rs  dhvani_smoke_test.rs
scripts/: bench-history.sh
src/: delay.rs  dsp_util.rs  dynamics.rs  effects.rs  envelope.rs  eq.rs  error.rs  filter.rs  lib.rs  mod_matrix.rs  modulation.rs  noise.rs  oscillator.rs  panning.rs  reverb.rs  smoothing.rs  tuning.rs  voice.rs  wavetable.rs
src/acoustics/: ambisonics.rs  analysis.rs  binaural.rs  convolution.rs  coupled.rs  directivity.rs  fdn_reverb.rs  mod.rs  room.rs
src/oscillator/: core.rs  mod.rs  sub.rs  sync.rs  unison.rs
src/synth/: additive.rs  drum.rs  fm.rs  formant.rs  granular.rs  mod.rs  physical.rs  subtractive.rs  vocoder.rs
tests/: integration.rs
